--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 Django==3.1
--e git+https://github.com/ra-systems/django-slick-reporting.git@feature/group_by_date_support#egg=django-slick-reporting
+-e git+https://github.com/ra-systems/django-slick-reporting.git@develop#egg=django-slick-reporting
