--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Django==3.1
 # -e git+https://github.com/ra-systems/django-slick-reporting.git@feature/group_by_char_field#egg=django-slick-reporting
-django-slick-reporting
+django-slick-reporting>=0.5.1
